--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@craco/craco": "^7.0.0-alpha.0",
     "aos": "^2.3.4",
+    "gsap": "^3.11.4",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0"
   },
   "scripts": {
@@ -33,6 +35,7 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "sass": "^1.58.3"
   }
 }
