--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "gsap": "^3.11.4",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "semantic-ui-react": "^2.1.4"
   },
   "scripts": {
     "start": "craco start",
